# src/routes/api/field.controller.ts
@@ -30,22 +30,24 @@ export async function deleteFieldById(req: Request, res: Response) {
 }
 
 export async function updateField(req: Request, res: Response) {
-  const { name, fieldId } = req.body;
-  const field: IField = await FieldService.getFieldById(req.body.fieldId);
+  const { name, id, value } = req.body;
+  const field: IField = await FieldService.getFieldById(id);
   if (!field) {
     throw new BussinessError("There is no field for this user");
   }
   field.name = name;
-  await FieldService.updateField(fieldId, field);
+  field.value = value;
+  await FieldService.updateField(id, field);
   res.json(field);
 }
 
 export async function saveField(req: Request, res: Response) {
-  const { name, docId, containerId } = req.body;
+  const { name, docId, containerId, value } = req.body;
 
   let user: IUser = await UserService.getUserById(req.userId);
   const field: TField = {
     name: name,
+    value: value,
     owner: user,
     viewPermissions: [user],
     updatePermissions: [user],
@@ -54,7 +56,8 @@ export async function saveField(req: Request, res: Response) {
   const fieldSaved = await FieldService.saveField(field);
   if (docId) {
     await DocService.addFieldToDoc(docId, fieldSaved);
-  } else if (containerId) {
+  }
+  if (containerId) {
     await ContainerService.addFieldToContainer(containerId, fieldSaved);
   }
 
